setup-scripts/04-oda-canvas/component-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: canvas
    meta.helm.sh/release-namespace: canvas
  labels:
    app.kubernetes.io/managed-by: Helm
  name: component-gateway
  namespace: components
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.kub.feri.ai'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*.kub.feri.ai'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wc-kub-feri-ai-tls
      mode: SIMPLE
