setup-scripts/04-oda-canvas/keycloak-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: canvas-keycloak
  name: canvas-keycloak-vs
  namespace: canvas
spec:
  gateways:
  - components/component-gateway
  hosts:
  - 'canvas-keycloak.kub.feri.ai'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: canvas-keycloak-headless
        port:
          number: 8083
